--- a/techcon_website/schedule.html
+++ b/techcon_website/schedule.html
@@ -44,7 +44,7 @@
     </table>
   </main>
    <footer>
-    <p>&copy; 2024 TechCon. All rights reserved. Copyright.</p>
+   <p>Copyright © 2024 TechCon. All rights reserved.</p>
   </footer>
 </body>
 </html>
