--- a/techcon_website/schedule.html
+++ b/techcon_website/schedule.html
@@ -44,7 +44,7 @@
     </table>
   </main>
    <footer>
-   <p>copyright</p>
+   <p>&copy; 2024 TechCon. All rights reserved. copyright .</p>
   </footer>
 </body>
 </html>
